--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@tanstack/react-query": "^5.87.4",
+    "dayjs": "^1.11.18",
     "expo": "~54.0.7",
+    "expo-auth-session": "^7.0.8",
+    "expo-constants": "^18.0.8",
+    "expo-device": "^8.0.7",
+    "expo-notifications": "^0.32.11",
+    "expo-router": "^6.0.4",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.2.1",
+    "i18next": "^25.5.2",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-i18next": "^15.7.3",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
   },
   "private": true
