--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-localize": "^3.5.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "expo-web-browser": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
