--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@tanstack/react-query": "^5.89.0",
+    "dayjs": "^1.11.18",
     "expo": "~54.0.0",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.8",
@@ -19,6 +22,7 @@
     "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.4",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.7",
     "firebase": "^12.1.0",
     "i18next": "^25.5.0",
     "react": "19.1.0",
@@ -28,8 +32,7 @@
     "react-native-localize": "^3.5.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "expo-web-browser": "~15.0.7"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
